chore: use latest know patient data by reporting date in ObdsV3Processor logic